[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/frame0002.png" type="Texture" id=1]
[ext_resource path="res://Enemies/XpOrb.gd" type="Script" id=2]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/frame0000.png" type="Texture" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/frame0001.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 40, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 40, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 40, 40, 20, 20 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 2.0
height = 0.0

[sub_resource type="CircleShape2D" id=10]
radius = 174.233

[sub_resource type="CapsuleShape2D" id=12]
radius = 2.0
height = 0.0

[node name="XpOrb" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 2, 9.33333 )
scale = Vector2( 0.566667, 0.625 )
texture = ExtResource( 3 )
offset = Vector2( 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.66282, 3.26625 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 7 )
animation = "walk"
frame = 3
playing = true
offset = Vector2( 1, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 1 )
shape = SubResource( 8 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 2, 1 )
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="SoftCollision" to="." method="_on_SoftCollision_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
